# RSALicenseModule

./: Base64.h  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  application_example.cpp  biginteger.cpp  biginteger.h  get_machineid.cpp  get_machineid_external.h  get_machineid_main.cpp  get_machineid_win.cpp  getmachineid_internal.h  makelicense.cpp  rsalicense.cpp  rsalicense.h
src/: application_example.cpp  biginteger.cpp  biginteger.h  get_machineid.cpp  get_machineid_main.cpp  get_machineid_unix.cpp  getmachineid_internal.h  makelicense.cpp  rsalicense.cpp  rsalicense.h
unittest/: unittests.cpp
